[package]
name = "ssb-legacy-msg"
version = "0.1.2"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
ssb-legacy-msg-data = { git="https://github.com/leo-lb/legacy-msg-data" }
ssb-multiformats = {git="https://github.com/leo-lb/ssb-multiformats"}
serde = { version = "1.0.104", features = ["derive"] }
strtod = { git = "https://github.com/leo-lb/strtod" }
crypto-hash = "0.3.4"
